<resources>
    <string name="app_name">Pacifier</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="button_logar">Login</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_compras">Compras</string>
    <string name="menu_vendas">Vendas</string>
    <string name="menu_trocas">Trocas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about">About</string>
    <string name="action_logout">Sair da conta</string>
</resources>