<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_compras_24"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_vendas"
            android:icon="@drawable/ic_vendas_24"
            android:title="@string/menu_vendas" />
        <item
            android:id="@+id/nav_trocas"
            android:icon="@drawable/ic_trocas_24"
            android:title="@string/menu_trocas" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24"
            android:title="@string/menu_about" />
    </group>
</menu>