<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobile.pacifier.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_compras"
        android:name="com.mobile.pacifier.fragments.compras.ComprasFragment"
        android:label="@string/menu_compras"
        tools:layout="@layout/fragment_compras" />

    <fragment
        android:id="@+id/nav_vendas"
        android:name="com.mobile.pacifier.fragments.vendas.VendasFragment"
        android:label="@string/menu_vendas"
        tools:layout="@layout/fragment_vendas" />

    <fragment
        android:id="@+id/nav_trocas"
        android:name="com.mobile.pacifier.fragments.trocas.TrocasFragment"
        android:label="@string/menu_trocas"
        tools:layout="@layout/fragment_trocas" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.mobile.pacifier.fragments.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>